switch to gui layer fix screen title update forge to 1.21.9